[tool.poetry]
name = "youtubedownloader"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ttkwidgets = "^0.11.0"
youtube-dl = "^2020.7.28"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
